kubernetes-app/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend-deploy
  name: backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend-deploy
    spec:
      containers:
      - image: task-backend:latest
        name: fcarr045/task-backend
        ports:
        - containerPort: 3001
        resources: {}
status: {}
