kubernetes-app/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: postgres-deploy
  name: postgres-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgres-deploy
    spec:
      containers:
      - image: postgres:15
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d/

      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
      - name: init-script
        configMap:
          name: postgres-init-sql
status: {}
