kubernetes-app/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: postgres-service
  name: postgres-service
spec:
  ports:
  - name: 5432-5432
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres-deploy
  type: ClusterIP
status:
  loadBalancer: {}
