kubernetes-app/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: task-app.local
    http:
      paths:
      - backend:
          service:
            name: backend-service
            port:
              number: 3001
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
